--- a/default.hbs
+++ b/default.hbs
@@ -28,9 +28,9 @@
     <footer class="site-footer">
         <a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">Subscribe!</span></a>
         <div class="inner">
-             <section class="copyright">All content copyright <a href="/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
-             <section class="poweredby">Powered by <a class="icon-ghost" href="http://ghost.org">Ghost</a></section>
-            
+             <section class="copyright">All content copyright <a href="http://www.socialedutainment.cl/">{{@blog.title}}</a> &copy; 2013 &bull; All rights reserved.</section>
+             <section class="poweredby">Powered by <a class="icon-ghost" href="http://btechchile.com">BTECH</a></section>
+
         </div>
         <section><a class="button-rounded button-jump-top js-jump-top" href="#"></a></section>
     </footer>
